# mid_rt_bold

./: .gitignore  README.md  pyproject.toml  set_up.sh
figures/: between-run_icc_models
scripts/: checking_rt.ipynb  extract_roi_timeseries.py  firstlvl_runs.py  group_diff.py  group_estimate.py  model_designmat_regressors.py  raw_predicted_timeseries.py  rt_mid_firstlvl.ipynb  run_model-icc.py  upload_neurovault.py
scripts/cluster_jobs/: make_first.sh  make_group.sh  make_group_diff.sh  make_icc.sh  make_voltrim.sh
scripts/cluster_jobs/templates/: abcd_firstlevel.txt  abcd_group.txt  abcd_group_diff.txt  abcd_trimmedpreproc.sh  abcd_trimmedpreproc.txt  roi_batch.txt
